added the mem0 memory for long term memory of user
